--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    background: url("../images/concrete_seamless.png");
+    background: url("Background.jpg");
   }
   
   * {
@@ -77,23 +77,27 @@ body {
     background: #4aaaa5;
   }
   
-  nav {
+  .navbar-brand1  {
+  font-size: 30px;
+  font-weight: bold;
+  color: #4aaaa5;
+  text-decoration: none;
+}
+
+
+  /* nav {
     float: left;
     margin-top: 25px;
-  }
+  } */
   
-  nav a {
+    nav a {
     display: inline-block;
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
     color: #999;
     text-decoration: none;
-    border-left: 1px solid #efefef;
-  }
-  
-  nav a:first-child {
-    border-left: 0 none;
+    border-left: 1px solid #efefef; */
   }
   
   /* footer */
@@ -120,7 +124,11 @@ body {
   /* main */
   
   #main-container {
-    padding-top: 130px;
+    padding-top: 50px;
+    min-height: calc(100vh - 70px);
+  }
+  #main-container1 {
+    padding-top: 30px;
     min-height: calc(100vh - 70px);
   }
   
@@ -129,7 +137,7 @@ body {
     width: 100%;
     max-width: 960px;
     padding: 30px;
-    margin: 0 0 40px;
+    margin: 40px 0 25px 80px;
     background: #ffffff;
     border: 1px solid #dddddd;
   }
@@ -139,8 +147,9 @@ body {
   .work {
     position: relative;
     float: left;
+    height: 185px;
     width: 274px;
-    margin: 20px 0 25px;
+    margin: 20px 0 25px 95px;
     overflow: auto;
   }
   
@@ -161,13 +170,20 @@ body {
     padding: 15px;
     margin-bottom: 0;
     font-weight: 300;
-    line-height: 30px;
+    line-height: 13px;
     color: #ffffff;
     text-align: center;
     background: #4aaaa5;
     border-bottom: 0;
   }
   
+  /* Código para centrar imagen  */
+  .centrar {
+    margin: 0 0 0 32px;
+
+
+  }
+
   .auth-image {
     float: left;
     width: 200px;
